atest/testdata/cli/error/parsing_error.robot
*** Settings ***
Invalid           Setting
Suite Teardown    No Operation
Test Teardown     No Operation

*** Test Cases ***
Parsing Error
    No Operation
